--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="crime_details_label">Details</string>
     <string name="crime_solved_label">Sovled?</string>
     <string name="crime_title">Crimes</string>
+    <string name="data_picker_title">Date of Crime</string>
 
 </resources>
