--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,9 @@
     <string name="crime_solved_label">Sovled?</string>
     <string name="crime_title">Crimes</string>
     <string name="data_picker_title">Date of Crime</string>
-
+	<string name="new_crime">New crime</string>
+	<string name="show_subtitle">Show Subtitle</string>
+	<string name="hide_subtitle">Hide Subtitle</string>
+	<string name="subtitle">If you see something,say something</string>
+	<string name="delete_crime">Delete</string>
 </resources>
